# washedmcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  Claude.md  Dockerfile  HACKATHON_GAMEPLAN.md  LICENSE  QUICKSTART.md  README.md  TEAM_BRIEF.md  docker-compose.yml  install.sh  installed_servers.json  mcp_tool_calls.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup-claude.sh  washedmcp.example.yaml
.claude/: settings.local.json
.claude/hooks/: mcp_json_logger.py
deploy/: README.md  kubernetes.yaml
docs/: CONTEXT_GRAPH_PLAN.md  README.md
src/: __init__.py  cli.py  database.py  embedder.py  indexer.py  mcp_server.py  parser.py  searcher.py  toon_formatter.py
tests/: __init__.py  conftest.py  test_database.py  test_embedder.py  test_indexer.py  test_parser.py  test_searcher.py  test_toon_formatter.py
tests/test_codebase/: api.py  auth.py  utils.py
washedmcp/: .mcp.json  README.md  __init__.py  async_indexer.py  background.py  cli.py  config.py  database.py  embedder.py  health.py  indexer.py  installed_servers.json  json_storage.py  logging_config.py  mcp_metadata.json  mcp_server.py  mcp_tool_calls.json  mcpdatabase.csv  package-lock.json  package.json  parser.py  searcher.py  security.py  server.py  stats.py  summarizer.py  test_install.mjs  toon_formatter.py
washedmcp-frontend/: .env.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json
washedmcp-frontend/app/: globals.css  layout.tsx  page.tsx
washedmcp-frontend/app/(app)/: layout.tsx
washedmcp-frontend/app/(app)/chat/: page.tsx
washedmcp-frontend/app/(app)/context/: page.tsx
washedmcp-frontend/app/(app)/dashboard/: page.tsx
washedmcp-frontend/app/(app)/mcp/: page.tsx
washedmcp-frontend/app/(app)/settings/: page.tsx
washedmcp-frontend/app/(app)/team/: page.tsx
washedmcp-frontend/app/api/contexts/: route.ts
washedmcp-frontend/app/api/graph/: route.ts
washedmcp-frontend/app/api/mcps/: route.ts
washedmcp-frontend/app/api/team/: route.ts
washedmcp-frontend/components/: CommandPalette.tsx  ErrorBoundary.tsx  KeyboardShortcutProvider.tsx  ShortcutsModal.tsx  Skeleton.tsx  ToastProvider.tsx
washedmcp-frontend/components/graph/: EmptyState.tsx  GraphControls.tsx  GraphLegend.tsx  GraphView.tsx  NodeModal.tsx  index.ts
washedmcp-frontend/components/landing/: CTA.tsx  Features.tsx  Footer.tsx  Hero.tsx
washedmcp-frontend/components/landing-page/: animated-counter.tsx  bento-features.tsx  cta.tsx  features.tsx  footer.tsx  header.tsx  hero-configurable.tsx  logo-cloud.tsx  magnetic-button.tsx  pricing.tsx  spotlight-provider.tsx  stacking-features.tsx  stats.tsx  testimonials.tsx  text-scramble.tsx
washedmcp-frontend/components/landing-page/variants/bento/: bento-3d.tsx  bento-cards.tsx  bento-flat.tsx  bento-masonry.tsx
washedmcp-frontend/components/landing-page/variants/hero/: hero-glassmorphic.tsx  hero-split.tsx  index.ts
washedmcp-frontend/components/landing-page/variants/stacking/: stacking-morph.tsx  (+2 more)
washedmcp-frontend/components/layout/: AppLoadProvider.tsx  Sidebar.tsx
washedmcp-frontend/components/settings/: DataSection.tsx  DatabaseSection.tsx  ProjectSection.tsx  UsageSection.tsx
washedmcp-frontend/components/skeletons/: ContextTableSkeleton.tsx  GraphSkeleton.tsx  MCPCardSkeleton.tsx  SettingsSkeleton.tsx  SidebarSkeleton.tsx  TeamSkeleton.tsx  index.ts
washedmcp-frontend/config/: design-system.json  landing-page.json  landing-page.schema.ts
washedmcp-frontend/hooks/: useContextData.ts  useDebounce.ts  useGraphAnimation.ts  useGraphControls.ts  useGraphData.ts  useKeyboardShortcut.ts  useLocalStorage.ts  useMCPData.ts  useMediaQuery.ts  usePerformance.ts  useSettingsData.ts  useTeamData.ts  useToast.ts
washedmcp-frontend/lib/: avatarGradient.ts  chromadb.ts  freshness.ts  neo4j.ts  performance.ts  shortcuts.ts  validation.ts  websocket.ts
washedmcp-frontend/lib/data/: dummy-data.ts  index.ts
washedmcp-frontend/lib/generators/: layout-composer.ts
washedmcp-frontend/lib/types/: data.ts
washedmcp-rec-system/: main.ts  pyproject.toml
washedmcp-rec-system/mcp/example/: index.ts
washedmcp-rec-system/mcp/orchestrator/: index.ts  recommendation-engine.ts  server-manager.ts  smithery.ts  validation.ts
washedmcp-rec-system/mcp/washedmcp/: index.ts
washedmcp-rec-system/tools/: find_mcp.py  installer.py
washedmcp/.claude/commands/: install-mcp.md
washedmcp/mcp/cleanmcp/: index.ts
washedmcp/mcp/codesearch/: index.ts
washedmcp/mcp/orchestrator/: capabilities.ts  index.ts  server-manager.ts  smithery.ts  validation.ts
washedmcp/mcp/washedmcp/: index.ts
washedmcp/tools/: __init__.py  metadata_manager.py
(+27 files in other folders)
